<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:onClick="Evaluar"
        android:text="@string/button1_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_status" />

    <EditText
        android:id="@+id/txtIn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtIn1_name"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txtIn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txtIn2_name"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIn1" />

    <TextView
        android:id="@+id/label_status"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/label1_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIn2">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/radbutton1_name" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/radbutton2_name" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/radbutton3_name" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/radbutton4_name" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>